fixing font issue with special characters on Safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,7 +50,7 @@ h2 {
 }
 
 h1, h2 {
-	font-weight: 300;
+	font-weight: 400;
 }
 
 .placeholder-hero {
